--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -6,12 +6,12 @@
 <web-app>
 
   <!-- welcome-file-list>
-    <welcome-file>Label.html</welcome-file>
+    <welcome-file>whLabel.html</welcome-file>
   </welcome-file-list-->
   
   <servlet>
     <servlet-name>labelServlet</servlet-name>
-    <servlet-class>com.dynamobi.label.server.WHLabelServiceImpl</servlet-class>
+    <servlet-class>com.dynamobi.pentaho.whlabel.server.WHLabelServiceImpl</servlet-class>
   </servlet>
   
   <servlet-mapping>
