changes related to packaging

--- a/package-res/plugin.xml
+++ b/package-res/plugin.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin title="Label Plugin">
+  <!-- Declaration of Serverside implemation service for GWT reference -->
+  <webservice id="whLabelService" type="gwt" class="com.dynamobi.pentaho.whlabel.server.WHLabelServiceImpl"/>
+  
+  <!-- Declaration of content generator of WH Label plugin UI -->
+  <content-generator id="label" title="GWT Echo" type="xlabel" class="com.dynamobi.pentaho.whlabel.WHLabelContentGenerator"/>
 
-  <webservice id="labelService" type="gwt" class="com.dynamobi.label.server.WHLabelServiceImplLite"/>
+  <!-- Declaration of Menu Item to be displayed for the WH Label plugin -->
+  <menu-items>
+	<menu-item id="datawarehouselables1" anchor="tools-submenu" label="Set Warehouse Labels" command="content/label/selectSchema" type="MENU_ITEM" how="LAST_CHILD"/>
+  </menu-items>
 
-  <content-generator id="label" title="GWT Echo" type="xlabel" class="com.dynamobi.label.WHLabelContentGenerator"/>
-
+  <!-- Declaration of the static paths for the Label plugin UI -->
   <static-paths>
   	<static-path url="/label/gecho-res" localFolder="resources"/>
   	<static-path url="/label/templates" localFolder="templates"/>
@@ -12,11 +19,7 @@
   	<static-path url="/label/help" localFolder="help"/>
   	<static-path url="/label/images" localFolder="images"/>
     <static-path url="/label/scripts" localFolder="scripts"/>
-    <static-path url="/label/label" localFolder="label"/>
+    <static-path url="/label/label" localFolder="whlabel"/>
   </static-paths>  
-
-  <menu-items>
-	<menu-item id="datawarehouselables1" anchor="tools-submenu" label="Set Warehouse Labels" command="content/label/selectSchema" type="MENU_ITEM" how="LAST_CHILD"/>
-  </menu-items>
 
 </plugin>
