--- a/build.properties
+++ b/build.properties
@@ -2,6 +2,7 @@
 project.revision=TRUNK-SNAPSHOT
 #The name of your jar and zip artifact
 ivy.artifact.id=label-plugin
+ivy.artifact.ds.id=label-plugin-ds
 ivy.artifact.group=pentaho
 #Natural language description of your plugin
 impl.title=Label Plugin
