--- a/build.properties
+++ b/build.properties
@@ -15,8 +15,8 @@ gwt.output.dir=${basedir}/war
 lib.dir=${basedir}/war/WEB-INF/lib
 
 pentaho.dir=E:/biserver-ee-3.6.0-GA/biserver-ee
-pentaho.classes.dir=E:/biserver-ee-3.6.0-GA/biserver-ee/tomcat/webapps/pentaho/WEB-INF/classes
-pentaho.lib.dir=E:/biserver-ee-3.6.0-GA/biserver-ee/tomcat/webapps/pentaho/WEB-INF/lib
-pentaho.solutions.dir=E:/biserver-ee-3.6.0-GA/biserver-ee/pentaho-solutions
+pentaho.classes.dir=${pentaho.dir}/tomcat/webapps/pentaho/WEB-INF/classes
+pentaho.lib.dir=${pentaho.dir}/tomcat/webapps/pentaho/WEB-INF/lib
+pentaho.solutions.dir=${pentaho.dir}/pentaho-solutions
 
 dependency.bi-platform.revision=TRUNK-SNAPSHOT
