--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="lib" path="lib/kettle-core.jar"/>
 	<classpathentry kind="lib" path="lib/kettle-engine.jar"/>
 	<classpathentry kind="lib" path="lib/nsmdf-0.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/openjava.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
