--- a/build.properties
+++ b/build.properties
@@ -1,3 +1,10 @@
 # change these for your specific machine
 kettle.dir=/home/kevin/kettle
 pentaho.dir=/home/kevin/biserver-ce
+
+# change these (or pass as arguments) to change startup behavior of plugins.
+Luciddb.start.db.on.plugin.startup=true
+# PDI-specific:
+Luciddb.start.admin.on.plugin.startup=true
+# Specify a URL if a non-default location is desired.
+Luciddb.adminui.URL=/adminui/SQLAdmin.html
