--- a/build.xml
+++ b/build.xml
@@ -21,6 +21,10 @@ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 
   <property file="build.properties" />
 
+  <condition property="luciddb.ext" value=".zip" else="tar.bz2">
+    <os family="windows" />
+  </condition>
+
   <condition property="luciddb.url" value="http://downloads.sf.net/luciddb/luciddb-bin-win32-0.9.3.zip">
     <and>
       <os family="windows" />
@@ -88,11 +92,12 @@ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
   </target>
 
   <target name="check_lucid">
-    <available file="remote_resources/luciddb-0.0.0" type="dir" property="lucid.exists" />
+    <available file="remote_resources/luciddb.${luciddb.ext}" type="file"
+      property="lucid.exists" />
   </target>
 
   <target name="fetch_lucid" depends="check_lucid" unless="lucid.exists">
-    <get src="${luciddb.url}" dest="remote_resources/luciddb.tar.bz2"
+    <get src="${luciddb.url}" dest="remote_resources/luciddb.${luciddb.ext}"
       usetimestamp="true" />
   </target>
 
@@ -100,25 +105,6 @@ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
     <get src="http://build.dynamobi.com/job/dynamo_admin/lastSuccessfulBuild/artifact/flexsqladmin/adminui.war" dest="remote_resources/adminui.war" usetimestamp="true" />
 
     <get src="http://build.dynamobi.com/job/dynamo_ws/lastSuccessfulBuild/artifact/dynamows-admin/target/adminws.war" dest="remote_resources/adminws.war" usetimestamp="true" />
-  </target>
-
-  <target name="install_db" depends="fetch_lucid" unless="lucid.exists">
-    <!-- untar does not respect symbolic links which are apparently
-         necessary. -->
-    <!--<untar src="remote_resources/luciddb.tar.bz2" dest="remote_resources"
-      overwrite="true" compression="bzip2" />-->
-    <exec executable="tar">
-      <arg line="-C remote_resources/ -jxvf remote_resources/luciddb.tar.bz2" />
-    </exec>
-    <exec dir="." executable="sh"
-      osfamily="unix">
-      <env key="JAVA_HOME" path="${java_home}" />
-      <arg line="-c 'cd remote_resources/luciddb-0.0.0/install; sh ./install.sh'" />
-    </exec>
-    <exec dir="remote_resources/luciddb-0.0.0/install/" executable="install.bat"
-      osfamily="windows">
-      <env key="JAVA_HOME" path="${java_home}" />
-    </exec>
   </target>
 
   <target name="package-bi" depends="fetch_remote">
@@ -136,7 +122,7 @@ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
   <target name="finish">
   </target>
 
-  <target name="deploy-local-bi" depends="install_db">
+  <target name="deploy-local-bi" depends="fetch_remote">
     <ant antfile="build.xml" dir="bi">
       <property file="build.properties" />
       <property file="bi/build.properties" />
@@ -153,7 +139,7 @@ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
     </ant>
   </target>
 
-  <target name="deploy-local-pdi" depends="install_db">
+  <target name="deploy-local-pdi" depends="fetch_remote">
     <ant antfile="build.xml" target="deploy-local" dir="pdi">
       <property file="build.properties" />
     </ant>
