(DDB-41) and (DDB-40): support for optional launching of services at startup

--- a/build.properties
+++ b/build.properties
@@ -2,7 +2,7 @@
 kettle.dir=/home/kevin/kettle
 pentaho.dir=/home/kevin/biserver-ce
 
-# change these (or pass as arguments) to change startup behavior of plugins.
+# change these (or pass as CL arguments) to change startup behavior of plugins.
 Luciddb.start.db.on.plugin.startup=true
 # PDI-specific:
 Luciddb.start.admin.on.plugin.startup=true
