--- a/bi/build.xml
+++ b/bi/build.xml
@@ -73,6 +73,12 @@
     <copy todir="lib">
       <fileset file="${basedir}/../common/*.jar" />
     </copy>
+    <replace file="src/org/dynamobi/luciddb/LucidDbLauncher.java"
+      token="$${Luciddb.start.db.on.plugin.startup}"
+      value="${Luciddb.start.db.on.plugin.startup}" />
+    <replace file="src/org/dynamobi/luciddb/LucidDbLauncher.java"
+      token="$${Luciddb.start.admin.on.plugin.startup}"
+      value="${Luciddb.start.admin.on.plugin.startup}" />
   </target>
   <target name="del-launcher">
     <delete file="src/org/dynamobi/luciddb/LucidDbLauncher.java" />
