(DDB-41) and (DDB-40): discussed functionality implemented, support for custom url added.

--- a/bi/build.xml
+++ b/bi/build.xml
@@ -79,6 +79,8 @@
     <replace file="src/org/dynamobi/luciddb/LucidDbLauncher.java"
       token="$${Luciddb.start.admin.on.plugin.startup}"
       value="${Luciddb.start.admin.on.plugin.startup}" />
+    <replace file="src/org/dynamobi/luciddb/LucidDbLauncher.java"
+      token="$${Luciddb.adminui.URL}" value="${Luciddb.adminui.URL}" />
   </target>
   <target name="del-launcher">
     <delete file="src/org/dynamobi/luciddb/LucidDbLauncher.java" />
