--- a/build.properties
+++ b/build.properties
@@ -6,5 +6,5 @@ pentaho.dir=/home/kevin/biserver-ce
 Luciddb.start.db.on.plugin.startup=true
 # PDI-specific:
 Luciddb.start.admin.on.plugin.startup=true
-# Specify a URL if a non-default location is desired.
+# Specify a full URL if a non-default non-local-to-server location is desired.
 Luciddb.adminui.URL=/adminui/SQLAdmin.html
