--- a/build.properties
+++ b/build.properties
@@ -1,10 +1,3 @@
-# change these for your specific machine
+# change these for your specific machine if you want to deploy-local
 kettle.dir=/home/kevin/kettle
 pentaho.dir=/home/kevin/biserver-ce
-
-# change these (or pass as CL arguments) to change startup behavior of plugins.
-Luciddb.start.db.on.plugin.startup=true
-# PDI-specific:
-Luciddb.start.admin.on.plugin.startup=true
-# Specify a full URL if a non-default non-local-to-server location is desired.
-Luciddb.adminui.URL=/adminui/SQLAdmin.html
