--- a/bi/build.xml
+++ b/bi/build.xml
@@ -69,18 +69,12 @@
     <copy todir="lib">
       <fileset file="${basedir}/../common/*.jar" />
     </copy>
-    <replace file="src/org/dynamobi/luciddb/LucidDbLauncher.java"
-      token="$${Luciddb.start.db.on.plugin.startup}"
-      value="${Luciddb.start.db.on.plugin.startup}" />
-    <replace file="src/org/dynamobi/luciddb/LucidDbLauncher.java"
-      token="$${Luciddb.start.admin.on.plugin.startup}"
-      value="${Luciddb.start.admin.on.plugin.startup}" />
-    <replace file="src/org/dynamobi/luciddb/LucidDbLauncher.java"
-      token="$${Luciddb.adminui.URL}" value="${Luciddb.adminui.URL}" />
+    <copy todir="package-res/resources" file="${basedir}/../plugin_config.properties" />
   </target>
   <target name="del-launcher">
     <delete file="src/org/dynamobi/luciddb/LucidDbLauncher.java" />
-    <delete><fileset file="lib/*.jar" excludes="pentaho-bi-platform-api-3.7.0-stable.jar" /></delete>
+    <delete><fileset file="lib/*.jar" excludes="pentaho-bi-platform-*" /></delete>
+    <delete file="package-res/resources/plugin_config.properties" />
   </target>
   
   <!-- 
