--- a/pdi/build.xml
+++ b/pdi/build.xml
@@ -31,14 +31,6 @@ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 
   <target name="copy-launcher">
     <copy todir="src/org/dynamobi/luciddb" file="${basedir}/../common/LucidDbLauncher.java" />
-    <replace file="src/org/dynamobi/luciddb/LucidDbLauncher.java"
-      token="$${Luciddb.start.db.on.plugin.startup}"
-      value="${Luciddb.start.db.on.plugin.startup}" />
-    <replace file="src/org/dynamobi/luciddb/LucidDbLauncher.java"
-      token="$${Luciddb.start.admin.on.plugin.startup}"
-      value="${Luciddb.start.admin.on.plugin.startup}" />
-    <replace file="src/org/dynamobi/luciddb/LucidDbLauncher.java"
-      token="$${Luciddb.adminui.URL}" value="${Luciddb.adminui.URL}" />
   </target>
   <target name="del-launcher">
     <delete file="src/org/dynamobi/luciddb/LucidDbLauncher.java" />
@@ -65,6 +57,7 @@ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
    <copy file="build/lucidDb.jar" tofile="build/kettle/plugins/spoon/lucidDb/lucidDb.jar" />
 
    <copy file="../common/lucid_db_logo_PMS_2010-32.png" todir="build/kettle/plugins/spoon/lucidDb" />
+   <copy todir="build/kettle/plugins/spoon/lucidDb" file="../plugin_config.properties" />
 
    <copy todir="build/kettle/plugins/spoon/lucidDb/wars">
      <fileset file="${basedir}/../remote_resources/*.war" />
@@ -90,6 +83,7 @@ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
    <copy file="build/lucidDb.jar" tofile="${kettle.dir}/plugins/spoon/lucidDb/lucidDb.jar" />
 
    <copy file="../common/lucid_db_logo_PMS_2010-32.png" todir="${kettle.dir}/plugins/spoon/lucidDb" />
+   <copy todir="${kettle.dir}/plugins/spoon/lucidDb" file="../plugin_config.properties" />
 
    <copy todir="${kettle.dir}/plugins/spoon/lucidDb/wars">
      <fileset file="${basedir}/../remote_resources/*.war" />
